WP-3552: prevent wrapping.

--- a/css/style.css
+++ b/css/style.css
@@ -5358,6 +5358,9 @@ ul.slideshow-items li:first-of-type {
 }
 .wide-view .person-list-view .person-fpp-wrapper {
   float: left;
+  margin-left: -144px;
+  padding-left: 144px;
+  width: 100%;
 }
 .wide-view .person-list-view .field-name-title {
   padding-top: 24px;
@@ -7536,9 +7539,9 @@ fieldset.collapsible .fieldset-legend {
 .view-display-id-book_listing #edit-search-wrapper,
 .view-display-id-publications_listing #edit-search-wrapper {
   float: left;
-  width: 100%;
   margin-right: -36px;
   padding-right: 36px;
+  width: 100%;
 }
 .view-faculty-filters .views-submit-button,
 .view-display-id-working_paper_list .views-submit-button,
