--- a/sass/partials/design/_fpp-people.sass
+++ b/sass/partials/design/_fpp-people.sass
@@ -102,6 +102,9 @@
   .person-fpp-wrapper
     .wide-view &
       float: left
+      margin-left: -144px
+      padding-left: 144px
+      width: 100%
 
   // Name
   .field-name-title
